Bundle refactors